css/main.css
body {
    margin: 85px auto;
    /* width: 70%; */
    background-color: #0e0916;
    color: #f0d975;
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
}

.sidebar {
    height: 100%;
    width: 85px;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: #0c0616;
    transition: 0.5s;
    padding-top: 60px;
    overflow-x: hidden;
    white-space: nowrap
  }
  
  .sidebar a {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 25px;
    color: #f0d975;
    display: block;
    transition: 0.3s;
    white-space: nowrap
  }
  
  .sidebar a:hover {
    color: #f8efc5;
  }
  
  main .sidebar {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
  }

  #main {
    transition: margin-left .5s; /* transition effect */
    padding: 20px;
}
  
  .material-icons,
  .icon-text {
    vertical-align: middle;
  }
  
  .material-icons {
    padding-bottom: 3px;
    margin-right: 30px;
  }

  
  @media screen and (max-height: 450px) {
    .sidebar {padding-top: 15px;}
    .sidebar a {font-size: 18px;}
  }

nav ul, footer ul {
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
    padding: 0px;
    list-style: none;
    font-weight: bold;
}
nav ul li, footer ul li {
    display: inline;
    margin-right: 20px;
}

a {
    text-decoration: none;
    color: rgb(248, 235, 121);
}

a:hover {
    text-decoration: none;
}
h1 {
    font-size: 3em;
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
}
p {
    font-size: 1.5em;
    line-height: 1.4em;
    color: rgb(241, 218, 82);
}
footer {
    border-top: 1px solid #1f095c;
    font-size: .8em;
}

ul.posts { 
    margin: 20px auto 40px; 
    font-size: 1.5em;
}

ul.posts li {
    list-style: none;
}

